--- a/sitio/src/views/EditPerfil.ejs
+++ b/sitio/src/views/EditPerfil.ejs
@@ -10,74 +10,102 @@
         <%- include('./partials/header.ejs') %>
 
             <main class="main">
-                <div class = "contenedor-Informacion">
-                    <form action="/users/edituser/<%=session.email %>?_method=PUT" method="POST" enctype="multipart/form-data">
-                    <h4 class = "titulo-info-personal">Informacion personal</h4>
-                    <h5>Imagen de perfil</h5>
-                    <!-- <div id = "preview" style=" height: 200px;"></div> -->
-                    <div class = "contenedor-imagen-perfil">
-                        <div id = "preview" class = "imagen-perfil">
-                            <img class = "foto-perfil" src="/images/users/<%= session.imagen %>" alt="">
+                <div class="contenedor-Informacion">
+                    <form action="/users/edituser/<%=session.email %>?_method=PUT" method="POST"
+                        enctype="multipart/form-data" id="editPerfil">
+                        <h4 class="titulo-info-personal">Informacion personal</h4>
+
+                        <h5>Imagen de perfil</h5>
+                        <!-- <div id = "preview" style=" height: 200px;"></div> -->
+                        <div class="contenedor-imagen-perfil">
+                            <div id="preview" class="imagen-perfil">
+                                <img class="foto-perfil" src="/images/users/<%= session.imagen %>" alt="">
+                            </div>
+                            <div class="input-imagen">
+                                <label for="archivo">Seleccionar Imagen de perfil</label>
+                                <input type="file" id="archivo" name="imagen">
+                                <span id="error-images" class="text-danger small">
+                                    <%if (locals.errors && errors.images){%>
+                                        <p style="color: red;">
+                                            <%=errors.images.msg%>
+                                        </p>
+                                        <%}%>
+                                </span>
+                                <p>El formato debe ser JPG, JPEG, GIF, PNG, WEBP.</p>
+                            </div>
                         </div>
-                        <div class = "input-imagen">
-                            <label for="archivo">Seleccionar Imagen de perfil</label>
-                            <input type="file" id = "archivo" name = "imagen">
-                            <p>El formato debe ser JPEG, PNG o GIF.</p>
+
+                        <h5>Ajustes de Perfil</h5>
+                        <div class="contenerdor-info-basica">
+                            <div class="contenedor-label">
+                                <label class="titulo-label" for="">Nombre</label>
+                            </div>
+                            <div class="contenedor-input">
+                                <input value="<%= session.name %>" type="text"
+                                    class="form-control <%= locals.errores && locals.errores.name ? 'is-invalid' : null %> "
+                                    name="nombre" id="nombre">
+                                <p>Puedes actualizar tu nombre.</p>
+                                <span id="error-nombre" class="text-danger small">
+                                    <%= locals.errors && errors.nombre ? errors.nombre.msg : null %>
+                                </span>
+                            </div>
+                            <div class="contenedor-label">
+                                <label class="titulo-label" for="">Apellido</label>
+                            </div>
+                            <div class="contenedor-input">
+                                <input value="<%= session.lastname %>" type="text"
+                                    class="form-control <%= locals.errores && locals.errores.apellido ? 'is-invalid' : null %> "
+                                    name="apellido" id="apellido">
+                                <p>Puedes actualizar tu apellido.</p>
+                                <span id="error-apellido" class="text-danger small">
+                                    <%= locals.errors && errors.apellido ? errors.apellido.msg : null %>
+                                </span>
+                            </div>
+                            <div class="contenedor-label">
+                                <label class="titulo-label" for="">Fecha de nacimiento</label>
+                            </div>
+                            <div class="contenedor-input">
+                                <input value="<%= session.fecha %>" type="date"
+                                    class="form-control <%= locals.errores && locals.errores.fecha ? 'is-invalid' : null %> "
+                                    name="fecha" id="fecha" placeholder="dd/mm/aaaa">
+                                <p>Puedes actualizar tu fecha de nacimiento.</p>
+                                <span id="error-fecha" class="text-danger small">
+                                    <%= locals.errors && errors.fecha ? errors.fecha.msg : null %>
+                                </span>
+                            </div>
+                            <div class="contenedor-label">
+                                <label class="titulo-label" for="">Genero</label>
+                            </div>
+                            <div class="contenedor-input">
+                                <select class="editarGenero" id="genero" name="genero">
+                                    <% generos.forEach(genero=> { %>
+                                        <option value="<%= genero %>" <%=genero==session.genero ? 'selected' : null %> >
+                                            <%= genero %>
+                                        </option>
+                                        <% }); %>
+                                </select>
+                                <p>Puedes actualizar tu genero.</p>
+                                <span id="error-genero" class="text-danger small">
+                                    <%= locals.errors && errors.genero ? errors.genero.msg : null %>
+                                </span>
+                            </div>
+                            <div class="contenedor-label">
+                                <input value="<%= session.email%>" type="email" name="correo" id="correo"
+                                    style="display: none;">
+                            </div>
+                            
+                            <div class="contenedor-boton">
+                                <button type="submit">Guardar Cambios</button>
+                                <span id="error-empty" class="text-danger small"></span>
+                            </div>
+                           
                         </div>
-                    </div>
-                    <h5>Ajustes de Perfil</h5>
-                    <div class = "contenerdor-info-basica">
-                        <div class = "contenedor-label">
-                            <label class = "titulo-label" for="">Nombre</label>
-                        </div>
-                        <div class = "contenedor-input">
-                            <input value = "<%= session.name %>"type="text" name="nombre" id="">
-                            <p>Puedes actualizar tu nombre.</p>
-                            <span class = "mensaje-error-user"><%= locals.errors && errors.nombre ? errors.nombre.msg : null %></span> 
-                        </div>
-                        <div class = "contenedor-label">
-                            <label class = "titulo-label" for="">Apellido</label>
-                        </div>
-                        <div class = "contenedor-input">
-                            <input value = "<%= session.lastname %>" type="text" name="apellido" id="">
-                            <p>Puedes actualizar tu apellido.</p>
-                            <span class = "mensaje-error-user"><%= locals.errors && errors.apellido ? errors.apellido.msg : null %></span>  
-                        </div>
-                        <div class = "contenedor-label">
-                            <label class = "titulo-label" for="">Fecha de nacimiento</label>
-                        </div>
-                        <div class = "contenedor-input">
-                            <input value = "<%= session.fecha %>" type="date" name="fecha" id="" placeholder="dd/mm/aaaa">
-                            <p>Puedes actualizar tu fecha de nacimiento.</p>
-                            <span class = "mensaje-error-user"><%= locals.errors && errors.fecha ? errors.fecha.msg : null %></span> 
-                        </div>
-                        <div class = "contenedor-label">
-                            <label class = "titulo-label" for="">Genero</label>
-                        </div>
-                        <div class = "contenedor-input">
-                            <select class = "editarGenero" id="genero" name="genero">
-                                <% generos.forEach(genero => { %>
-                                    <option  value = "<%= genero %>" <%= genero == session.genero ? 'selected' : null %> ><%= genero %></option>
-                                <% }); %>
-                            </select>
-                            <p>Puedes actualizar tu genero.</p>
-                        </div>
-                        <div class = "contenedor-label">
-                            <input value = "<%= session.email%>" type="email" name="correo" id="" style = "display: none;">
-                        </div>
-                        <div class = "contenedor-boton">
-                            <button type = "submit">Guardar Cambios</button>
                     </form>
-                        </div>
-
-                </div>
-
                 </div>
             </main>
 
             <!-- Footer -->
             <%- include('./partials/footer.ejs') %>
-            <script src = "/javascripts/validarpreimagen.js"></script>
 
                 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
                     integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
@@ -85,6 +113,8 @@
                 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
                     integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
                     crossorigin="anonymous"></script>
+                <script src="/javascripts/editPerfil.js"></script>
+                <script src="/javascripts/validarpreImagen.js"></script>
 
     </body>
 
