--- a/sitio/src/views/partials/header.ejs
+++ b/sitio/src/views/partials/header.ejs
@@ -17,7 +17,7 @@
                               <% }) %>
                         </ul>
                     </li>
-                    <li><a href="/#" class="enlaces">Nosotros</a></li>
+                    <li><a href="/users/nosotros" class="enlaces">Nosotros</a></li>
                     <li><a href="/#" class="enlaces">FAQ</a></li>
                     <ul class="enlaces-resp">
                         <li><a href="/users/login" class="enlaces"><b>Iniciar sesiÃ³n</b></a></li>
