--- a/sitio/src/views/partials/header.ejs
+++ b/sitio/src/views/partials/header.ejs
@@ -18,7 +18,7 @@
                         </ul>
                     </li>
                     <li><a href="/users/nosotros" class="enlaces">Nosotros</a></li>
-                    <li><a href="/#" class="enlaces">FAQ</a></li>
+                    <li><a href="/users/faq" class="enlaces">FAQ</a></li>
                     <ul class="enlaces-resp">
                         <li><a href="/users/login" class="enlaces"><b>Iniciar sesiÃ³n</b></a></li>
                         <li><a href="/users/register" class="enlaces"><b>Registrate</b></a></li>
