Update en vista login

--- a/sitio/src/views/login.ejs
+++ b/sitio/src/views/login.ejs
@@ -59,7 +59,7 @@
                         <!-- ENLACE A REGISTRO-->
 
                         <div class="form-group mb-3 c text-center">
-                            <p>¿No tienes cuenta? <a href="/users/register" target="_blank">Registrate</a> </p>
+                            <p>¿No tienes cuenta? <a href="/users/register">Registrate</a> </p>
                         </div>
 
                         <!-- BOTON FACEBOOK-->
