add changes cart

--- a/sitio/src/views/partials/header.ejs
+++ b/sitio/src/views/partials/header.ejs
@@ -12,43 +12,52 @@
                     <li><a href="/" class="enlaces">Inicio</a></li>
                     <li><a href="/products" class="enlaces">Productos</a>
                         <ul class="submenu">
-                            <% categorias.forEach(categoria => { %>
-                                <li><a href="/products/categorias/<%=categoria.id%>" class="enlaces"><%=categoria.name%></a></li>
-                              <% }) %>
+                            <% categorias.forEach(categoria=> { %>
+                                <li><a href="/products/categorias/<%=categoria.id%>" class="enlaces">
+                                        <%=categoria.name%>
+                                    </a></li>
+                                <% }) %>
                         </ul>
                     </li>
                     <li><a href="/users/nosotros" class="enlaces">Nosotros</a></li>
                     <li><a href="/users/faq" class="enlaces">FAQ</a></li>
                     <ul class="enlaces-resp">
-                        <li><a href="/users/login" class="enlaces"><b>Iniciar sesiÃ³n</b></a></li>
+                        <li><a href="/users/login" class="enlaces"><b>Iniciar sesión</b></a></li>
                         <li><a href="/users/register" class="enlaces"><b>Registrate</b></a></li>
-                        <li><a href="/users/cart" class="enlaces"><b>Carrito</b></a></li>
+                        <li><a href="/users/cart" class="enlaces menu-perfil"><b>Carrito</b></a></li>
                     </ul>
                 </ul>
             </div>
 
             <div id="buscar" class="buscador">
-                <form action="/products/search" class="d-flex" method="GET" >
-                    <input type="search" class="form-control-search me-2" placeholder="Voy a tener suerte" name="search">
-                    <button type="submit" class= "btn btn-outline-primary" >Buscar</button>
+                <form action="/products/search" class="d-flex" method="GET">
+                    <input type="search" class="form-control-search me-2" placeholder="Voy a tener suerte"
+                        name="search">
+                    <button type="submit" class="btn btn-outline-primary">Buscar</button>
                 </form>
             </div>
             <!-- i c o n o s -->
             <div class="nav-right">
                 <ul class="menu-icons">
-                    <li><a onclick = 'mostrar()' type="button" class="icons"><i class="fas fa-search"></i></a></li>
-                    <li><a href="/users/cart" class="icons"><i class="fas fa-shopping-cart"></i></a></li>
+                    <li><a onclick='mostrar()' type="button" class="icons"><i class="fas fa-search"></i></a></li>
                     <% if (locals.userLogin){ %>
-                        <li><a class = "visible" href="/" ><img class = "icon-foto-perfil" src= "/images/users/<%= locals.userLogin.imagen %>" alt=""></a>
-                            <ul class = "ul-session">
-                                <li><a href="/users/vistaPerfil" class="submenu-perfil"><img class = "icon-foto-perfil-submenu" src= "/images/users/<%= locals.userLogin.imagen %>" alt=""><%= locals.userLogin.name %></a></li>
+                        <li><a href="/users/cart" class="icons" data-bs-toggle="modal"
+                                data-bs-target="#modal-carrito"><i class="fas fa-shopping-cart"></i></a></li>
+                        <li><a class="visible" href="/"><img class="icon-foto-perfil"
+                                    src="/images/users/<%= locals.userLogin.imagen %>" alt=""></a>
+                            <ul class="ul-session">
+                                <li><a href="/users/vistaPerfil" class="submenu-perfil"><img
+                                            class="icon-foto-perfil-submenu"
+                                            src="/images/users/<%= locals.userLogin.imagen %>" alt="">
+                                        <%= locals.userLogin.name %>
+                                    </a></li>
                                 <li><a href="/users/edituser" class="menu-perfil">Editar Perfil</a></li>
-                                <li><a href="/users/logout" class="menu-perfil" >Cerrar sesion</a></li>
+                                <li><a href="/users/logout" class="menu-perfil">Cerrar sesion</a></li>
                             </ul>
                         </li>
-                    <% } else{%>
-                        <li><a href="/users/login" class="icons"><i class="fas fa-user"></i></a></li>
-                    <% } %>
+                        <% } else{%>
+                            <li><a href="/users/login" class="icons"><i class="fas fa-user"></i></a></li>
+                            <% } %>
                 </ul>
             </div>
 
@@ -59,5 +68,5 @@
         </nav>
     </div>
 
-    <script src = "/javascripts/mostrarSearch.js"></script>
+    <script src="/javascripts/mostrarSearch.js"></script>
 </header>
