--- a/sitio/public/stylesheets/style.css
+++ b/sitio/public/stylesheets/style.css
@@ -14,3 +14,5 @@
 @import url('./vistaPerfil.css');
 @import url('./error.css');
 @import url('./nosotros.css');
+@import url('./cine.css');
+@import url('./peliculas.css');
